--- a/defaults/main/geekbench.yml
+++ b/defaults/main/geekbench.yml
@@ -2,8 +2,8 @@
 
 want_system_tools_geekbench: yes
 
-system_tools_geekbench_version: 6.4.0
-system_tools_geekbench_archive_name: "Geekbench-{{system_tools_geekbench_version}}-{{ ansible_facts['system'] }}"
+system_tools_geekbench_version: 6.5.0
+system_tools_geekbench_archive_name: "Geekbench-{{system_tools_geekbench_version}}-{{ ansible_facts.system }}"
 system_tools_geekbench_url: "https://cdn.geekbench.com/{{ system_tools_geekbench_archive_name }}.tar.gz"
 system_tools_geekbench_version_major: "{{ system_tools_geekbench_version | split('.') | first }}"
 system_tools_geekbench_local_dir: "{{ system_local_dir }}"
@@ -11,3 +11,4 @@ system_tools_geekbench_local_bin_dir: "{{ system_tools_geekbench_local_dir }}/bi
 system_tools_geekbench_dir: "{{ system_tools_geekbench_local_dir }}/{{ system_tools_geekbench_archive_name }}"
 system_tools_geekbench_bin_name: "geekbench{{ system_tools_geekbench_version_major }}"
 system_tools_geekbench_bin: "{{ system_tools_geekbench_dir }}/{{ system_tools_geekbench_bin_name }}"
+system_tools_geekbench_shortcut_bin_name: "{{ system_tools_geekbench_bin_name }}"
